# CEP4SARGIS

./: CMakeLists.txt  LICENSE  README.md  build_mac.sh  installer.nsi  notarize_mac.sh  package_mac.sh  sign_mac.sh
.github/workflows/: mac_arm64_release.yml  mac_notarize.yml  release.yml  windows_release.yml
app/: CMakeLists.txt  Info.plist  app.rc
app/macos/: main_mac.mm
app/win/: main_win.cpp
cmake/: Dependencies.cmake  FindCeres.cmake
core/: CMakeLists.txt
core/include/core/: types.hpp
core/include/core/analysis/: forecast_error.hpp  residuals_analyzer.hpp  symmetry_analyzer.hpp
core/include/core/io/: csv_io.hpp  excel_io.hpp  json_io.hpp
core/include/core/montecarlo/: monte_carlo_engine.hpp
core/include/core/plugins/: plugin_interface.hpp  plugin_loader.hpp
core/include/core/regression/: exponential_model.hpp  gaussian_cdf_model.hpp  logistic_model.hpp  model_interface.hpp  polynomial_model.hpp  regression_engine.hpp
core/src/analysis/: forecast_error.cpp  residuals_analyzer.cpp  symmetry_analyzer.cpp
core/src/io/: csv_io.cpp  excel_io.cpp  json_io.cpp
core/src/montecarlo/: monte_carlo_engine.cpp
core/src/plugins/: plugin_loader.cpp
core/src/regression/: exponential_model.cpp  gaussian_cdf_model.cpp  logistic_model.cpp  polynomial_model.cpp  regression_engine.cpp
docs/: BUILD.md  PACKAGING_MAC.md
platform/: CMakeLists.txt
platform/include/platform/: os_utils.hpp
platform/src/: os_utils_macos.cpp  os_utils_win.cpp
plugins/: CMakeLists.txt
plugins/gaussian_cdf_plugin/: CMakeLists.txt  gaussian_cdf_plugin.cpp
resources/icons/: README.md
samples/: sample_data.csv
tests/: CMakeLists.txt
ui/: CMakeLists.txt
ui/include/ui/: data_manager.hpp  forecast_error_window.hpp  main_window.hpp  plot_view.hpp  residuals_window.hpp  symmetry_window.hpp
ui/src/: data_manager.cpp  forecast_error_window.cpp  main_window.cpp  plot_view.cpp  residuals_window.cpp  symmetry_window.cpp
